public class Cliente {
    private String nombre;
    private String correo;
    private String direccion;
    public void Cliente(String nombre, String correo, String direccion) {
        // TODO: Implementar el m�todo
    }
    public String getNombre() {
        // TODO: Implementar el m�todo
    }
    public void setNombre(String nombre) {
        // TODO: Implementar el m�todo
    }
    public String getCorreo() {
        // TODO: Implementar el m�todo
    }
    public void setCorreo(String correo) {
        // TODO: Implementar el m�todo
    }
    public String getDireccion() {
        // TODO: Implementar el m�todo
    }
    public void setDireccion(String direccion) {
        // TODO: Implementar el m�todo
    }
    public String mostrarInfo() {
        // TODO: Implementar el m�todo
    }
    public String toString() {
        // TODO: Implementar el m�todo
    }
}
