' Generated by UML Generator
' Encoded: nLN1QXin4BtlL-YugRsGimaX8MuWa0JJv5PwaBMJxL2jP4RQG9hctwlTbTRIoiQKGdinvetUcz5xO_dAM4wsQsLXVg3QSU8j4v8RSsqjuRQpS2UqUiAVmCwBxrW34qX2Gb4CfzYDH50Ms7l1MALqkoLOiIT7LKsF24q4EaPg9102jOh1odqil5IPgYnPgh5acS9Ppsx0FWx4yYnINfW9JcNTeLUDjMVU32qofeVJ0LBcEWoJaVULVE2zHAkD9KvtwcNMtkhnUuH-1DCVEAh1ySMxYy-Y-62jWqfEZGcdltuBNIRQ1cgijO-gQu7q6aPinL3P7jwHhZjXjPEv9k9lzsZinSQ3bqEYgv3v5DoeKUuh8P10DFqb3kiDkGspz6V6AORGHkp0c95vl25eE0MzShTYuNjqId0fEidfMLik-owrxhOI8lU_W75zL7o3qr7mRSyLbdbpVUDZluITsm7KKNFlNPXzllNf-RzVySsWbrv_pvnroyqRwRUeZbZuPmiSRht61bqeesUMjrozkR2DS8lCO_Ca2b02UVPcp8HEkBXaHteisRn3CFmv9MJEp-j76gHPtFjccTfK4CvL-AnU_qCcjsXG-3NEnyYS7u-VDFx0XQQtDrIovOnA_zGG_r3ggffS2TWdXuNtRxx5LVNhCYAaVgR5Ar2r-zFz3G
' URL: http://www.plantuml.com/plantuml/uml/nLN1QXin4BtlL-YugRsGimaX8MuWa0JJv5PwaBMJxL2jP4RQG9hctwlTbTRIoiQKGdinvetUcz5xO_dAM4wsQsLXVg3QSU8j4v8RSsqjuRQpS2UqUiAVmCwBxrW34qX2Gb4CfzYDH50Ms7l1MALqkoLOiIT7LKsF24q4EaPg9102jOh1odqil5IPgYnPgh5acS9Ppsx0FWx4yYnINfW9JcNTeLUDjMVU32qofeVJ0LBcEWoJaVULVE2zHAkD9KvtwcNMtkhnUuH-1DCVEAh1ySMxYy-Y-62jWqfEZGcdltuBNIRQ1cgijO-gQu7q6aPinL3P7jwHhZjXjPEv9k9lzsZinSQ3bqEYgv3v5DoeKUuh8P10DFqb3kiDkGspz6V6AORGHkp0c95vl25eE0MzShTYuNjqId0fEidfMLik-owrxhOI8lU_W75zL7o3qr7mRSyLbdbpVUDZluITsm7KKNFlNPXzllNf-RzVySsWbrv_pvnroyqRwRUeZbZuPmiSRht61bqeesUMjrozkR2DS8lCO_Ca2b02UVPcp8HEkBXaHteisRn3CFmv9MJEp-j76gHPtFjccTfK4CvL-AnU_qCcjsXG-3NEnyYS7u-VDFx0XQQtDrIovOnA_zGG_r3ggffS2TWdXuNtRxx5LVNhCYAaVgR5Ar2r-zFz3G
' Generated on: 2025-11-26T13:02:00.170314400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +mostrarInfo(): String
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -numeroDePedido: int
  -productos: ArrayList<Producto>
  -c: Cliente
  --
  +Pedido(c: Cliente)
  +getProductos(): ArrayList<Producto>
  +getNumero(): int
  +setNumero(numeroDePedido: int): void
  +agregarProducto(p: Producto): void
  +calcularTotal(): double
  +mostrarResumen(c: Cliente): String
  +toString(): String
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setNombre(precio: double): void
  +calcularPrecioFinal(): double
  +mostrarInfo(): String
  +toString(): String
}

class ProductoDigital {
  -tamanyoDescarga: String
  -licencia: String
  --
  +ProductoDigital(nombre: String, precio: double, tamanyoDescarga: String, licencia: String)
  +getTamanyoDescarga(): String
  +setTamanyoDescarga(tamanyoDescarga: String): void
  +getLicencia(): String
  +setLicencia(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +mostrarInfo(): String
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +mostrarInfo(): String
  +toString(): String
}

Pedido o-- Producto
Pedido <-- Cliente
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml